# lir

./: .gitignore  Cargo.toml  README.md
src/: ir.rs  lib.rs  utils.rs  write_base.rs
src/backend/: mod.rs
src/backend/cq/: mod.rs
src/backend/halo2/: convert.rs  mod.rs  table.rs  utils.rs  witness.rs
src/backend/halo2/vm_circuit/: binop.rs  blockexit.rs  call.rs  mod.rs
src/frontend/: mod.rs  utils.rs
src/frontend/c/: mod.rs  parse.rs  write_c.rs
src/ir/: dtype.rs  mod.rs  write_ir.rs
src/irgen/: mod.rs
src/opt/: deadcode.rs  gvn.rs  mem2reg.rs  mod.rs  opt_utils.rs  simplify_cfg.rs
src/vm/: calculate_c.rs  execute.rs  mod.rs  vm_types.rs
