[package]
name = "lir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lir"
path = "src/lib.rs"

[[bin]]
name = "lir"
path = "bin/lir.rs"
required-features = ["build-bin"]

[features]
build-bin = ["clap"]

[dependencies]
# front-end
lang-c = "0.15.0"
clap = { version = "4.1.7", features = ["derive"], optional = true }
thiserror = "1.0.38"
itertools = "0.10.5"

# back-end
cq = { git = "https://github.com/jeong0982/cq" }
